--- a/src/styles.css
+++ b/src/styles.css
@@ -21,13 +21,13 @@ button {
 }
 
 button:hover {
-  background: #0d41ce;
+  background: #666;
   color: #fff;
   cursor: pointer;
 }
 
 .input_area {
-  background: blueviolet;
+  background: #731fe0;
   width: 400px;
   height: 30px;
   padding: 8px;
@@ -36,21 +36,23 @@ button:hover {
 }
 
 .incomplete_area {
-  background: violet;
+  background: #00cccd;
   width: 400px;
   min-height: 200px;
   padding: 8px;
   margin: 8px;
   border-radius: 8px;
+  color: #fff;
 }
 
 .complete_area {
-  background: greenyellow;
+  background: #731fe0;
   width: 400px;
   min-height: 200px;
   padding: 8px;
   margin: 8px;
   border-radius: 8px;
+  color: #fff;
 }
 
 .title {
@@ -58,7 +60,7 @@ button:hover {
   margin-top: 0;
   font-weight: bold;
   font-size: 24px;
-  color: #666;
+  color: #fff;
 }
 
 ul {
